--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "6.1.0",
+    "@tanstack/react-query": "^5.62.15",
+    "@trpc/client": "^11.0.0-rc.682",
+    "@trpc/react-query": "^11.0.0-rc.682",
+    "@trpc/server": "^11.0.0-rc.682",
+    "next": "15.1.3",
+    "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
     "typescript": "^5",
