--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@geist-ui/icons": "^1.0.2",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.1.0",
     "@tanstack/react-query": "^5.62.15",
     "@trpc/client": "^11.0.0-rc.682",
     "@trpc/react-query": "^11.0.0-rc.682",
     "@trpc/server": "^11.0.0-rc.682",
+    "better-auth": "^1.1.15",
     "next": "15.1.3",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.3",
     "superjson": "^2.2.2",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
